# lightr-cri

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
ci/: bench.sh  budget.sh  critest-gate.sh  critest-skips.txt  greenlist-gate.sh  kubelet-smoke.sh  local-linux-gate.sh
ci/runners/: linux-runner.sh
ci/spdy-oracle/: go.mod  go.sum  main.go  run.sh
crates/lightr-cri-acceptance/: Cargo.toml
crates/lightr-cri-acceptance/src/: lib.rs
crates/lightr-cri-acceptance/tests/: acceptance.rs  critest.rs  streaming_net.rs
crates/lightr-cri-backend/: Cargo.toml
crates/lightr-cri-backend/src/: lib.rs  vocab.rs
crates/lightr-cri-fake/: Cargo.toml
crates/lightr-cri-fake/src/: lib.rs
crates/lightr-cri-net/: Cargo.toml
crates/lightr-cri-net/src/: chain.rs  lib.rs  netns.rs
crates/lightr-cri-proto/: Cargo.toml  PROVENANCE.md
crates/lightr-cri-proto/src/: lib.rs
crates/lightr-cri-server/: Cargo.toml
crates/lightr-cri-server/src/: lib.rs  main.rs
crates/lightr-cri-shell/: Cargo.toml
crates/lightr-cri-shell/src/: image.rs  lib.rs  runtime.rs
crates/lightr-cri-stream/: Cargo.toml
crates/lightr-cri-stream/examples/: spdy_harness.rs  zlib_inspect.rs
crates/lightr-cri-stream/src/: b64.rs  bridge.rs  channel.rs  lib.rs  portforward.rs  server.rs  status.rs  token.rs  ws.rs
crates/lightr-cri-stream/src/spdy/: conn.rs  dict.rs  frame.rs  headers.rs  mod.rs  zlib.rs
crates/lightr-cri-stream/tests/: server_handshake.rs  spdy_exec_e2e.rs
crates/lightr-cri-vectors/: Cargo.toml
crates/lightr-cri-vectors/src/: lib.rs
docs/bench/: README.md
docs/contract/: seam-contract-v1.1.md  seam-contract-v1.md
docs/handoff/: ADR-0017-cri-ready-not-cri-now.md  bench-cas-kpis-request.md  lightr-tl-onboarding.md  r1-compute-window-runbook.md  reply-shell-swap-2026-06-25.md
docs/investor/: lightr-onepager.html  lightr-thesis.html
docs/research/: r1-cni.md  r1-kubelet-smoke.md  r1-streaming.md
docs/spec/: build-spec-r0.md  build-spec-r1.md
docs/whitepaper/: lightr-cri-v1.md
tests/: GREENLIST
tools/protogen/: Cargo.toml
tools/protogen/src/: main.rs
vectors/: container-lifecycle-basic.json  container-remove-while-running-force.json  container-remove-while-running-refused.json  container-start-from-exited-refused.json  container-start-from-running-refused.json  container-status-unknown-not-found.json  crash-recovery-reopen-after-stop-preserves-exited.json  crash-recovery-reopen-preserves-images-and-not-ready-sandbox.json  crash-recovery-sandbox-survives.json  create-container-in-not-ready-sandbox.json  create-container-in-unknown-sandbox.json  exec-session-echo-exit-code.json  exec-session-exit-7.json  exec-sync-echo-and-exit-code.json  host-network-sandbox-no-ip.json  idempotency-remove-twice.json  idempotency-stop-sandbox-twice.json  idempotency-stop-twice.json  image-invalid-ref-rejected.json  image-pull-list-status-remove.json  image-remove-while-running-in-use.json  log-file-created-and-format.json  remove-image-idempotent.json  remove-unknown-sandbox-idempotent.json  sandbox-lifecycle-legal.json  sandbox-removal-cascade.json  sandbox-status-unknown-not-found.json  stop-from-created-noop.json  stop-running-exit-code-143.json  stop-running-grace0-exit-code-137.json
