[workspace]
resolver = "2"
members = [
    "crates/lightr-cri-proto",
    "crates/lightr-cri-backend",
    "crates/lightr-cri-fake",
    "crates/lightr-cri-shell",
    "crates/lightr-cri-server",
    "crates/lightr-cri-vectors",
    "crates/lightr-cri-acceptance",
    "tools/protogen",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# firewall: tonic/prost/tokio allowed ONLY in proto/shell/server/acceptance
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
blake3 = "1"
tempfile = "3"
assert_cmd = "2"
tonic-build = "0.12"
