[package]
name = "lightr-cri-shell"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
lightr-cri-proto = { path = "../lightr-cri-proto" }
lightr-cri-backend = { path = "../lightr-cri-backend" }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
