[package]
name = "lightr-cri-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
lightr-cri-backend = { path = "../lightr-cri-backend" }
tokio = { workspace = true }
axum = { workspace = true }
flate2 = { workspace = true }
httparse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
